syntax = "proto3";

option csharp_namespace = "Commons.Messages.Resources";

package Commons.Messages.Resources;

message LongResourceIdentifier{
	uint64 identifier = 1;
}